# torch-fx-optimizer

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  LEARNING_LOG.md  SESSION_STATE.md  conftest.py  main.py  pyproject.toml
docs/: recomputation_deep_dive.md
notebooks/: 00_essentials_only.ipynb  conv_example.ipynb
src/: __init__.py
src/torch_fx_optimizer/: __init__.py  graph_optimizer.py  optimization_pass.py
src/torch_fx_optimizer/passes/: __init__.py  redundant_ops.py
tests/: conftest.py  test_basic.py  test_redundant_ops.py
